Fixing ban alignment

--- a/public/css/champ-select.css
+++ b/public/css/champ-select.css
@@ -121,52 +121,52 @@ body {
 
 #b-0 {
     top: 907px;
-    left: 48px;
+    left: 34px;
 }
 
 #b-1 {
     top: 907px;
-    left: 1737px;
+    left: 1723px;
 }
 
 #b-2 {
     top: 907px;
-    left: 188px;
+    left: 174px;
 }
 
 #b-3 {
     top: 907px;
-    left: 1597px;
+    left: 1583px;
 }
 
 #b-4 {
     top: 907px;
-    left: 328px;
+    left: 314px;
 }
 
 #b-5 {
     top: 907px;
-    left: 1457px;
+    left: 1443px;
 }
 
 #b-6 {
     top: 907px;
-    left: 1251px;
+    left: 1237px;
 }
 
 #b-7 {
     top: 907px;
-    left: 534px;
+    left: 520px;
 }
 
 #b-8 {
     top: 907px;
-    left: 1111px;
+    left: 1097px;
 }
 
 #b-9 {
     top: 907px;
-    left: 674px;
+    left: 660px;
 }
 
 /* TEXT */
